<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_sticky_note_2_24"
            android:layout_margin="5dp">
        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/id_nota_item"
                android:text="@string/id_nota_item">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/uid_usuario_item"
                android:text="@string/uid_usuario_item">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/correo_usuario_item"
                android:text="@string/correo_usuario_item">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/fecha_hora_reg_item"
                android:text="@string/fecha_hora_reg_item">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Titulo_item"
                android:textSize="25dp"
                android:text="@string/Titulo_item">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:id="@+id/Descripcion_item"
                android:text="@string/Descripcion_item">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Fecha_item"
                android:textSize="15dp"
                android:text="@string/Fecha_item">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:id="@+id/Estado_item"
                android:text="@string/Estado_item">

            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>