<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:orientation="vertical"
    android:layout_gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elegirOptTxt"
        android:textSize="20sp"
        android:gravity="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eliminar_cd"
        android:text="@string/eliminar_cd"
        android:layout_margin="10dp">

    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editar_cd"
        android:text="@string/editar_cd"
        android:layout_margin="10dp">

    </Button>

</androidx.appcompat.widget.LinearLayoutCompat>
