<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <!-- Animation -->
<!--        <com.airbnb.lottie.LottieAnimationView-->
<!--            android:layout_width="220dp"-->
<!--            android:layout_height="220dp"-->
<!--            app:lottie_autoPlay="true"-->
<!--            app:lottie_fileName="calendario.json"-->
<!--            app:lottie_imageAssetsFolder="assets">-->

<!--        </com.airbnb.lottie.LottieAnimationView>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/app_name"
            android:textSize="35dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btn_singup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/btn_singup" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>
