<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/purple_200"
            app:cardUseCompatPadding="true"
            android:padding="10dp"
            app:cardCornerRadius="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_menu_title"
                    android:text="@string/main_menu_title"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:textSize="20dp"/>

                <ProgressBar
                    android:id="@+id/main_menu_progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_menu_username"
                    android:visibility="gone"
                    android:text="@string/main_menu_username"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_menu_uid"
                    android:visibility="gone"
                    android:text="@string/main_menu_uid"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_menu_user_mail"
                    android:visibility="gone"
                    android:text="@string/main_menu_user_mail"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<!--            1 - 2-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="20dp"
                android:weightSum="2">
<!--Opcion 1-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_add_note"/>
                    <Button
                        android:id="@+id/main_menu_add_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/main_menu_add_note"
                        android:layout_marginTop="10dp">
                    </Button>

                </androidx.appcompat.widget.LinearLayoutCompat>
<!--                Opcion 2-->

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_list_notes"/>
                    <Button
                        android:id="@+id/main_menu_show_notes"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_menu_show_notes"
                        android:layout_marginTop="10dp">
                    </Button>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

<!--                3-4-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="20dp"
                android:weightSum="2">
                <!--Opcion 3-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_baseline_archive_24"/>
                    <Button
                        android:id="@+id/main_menu_archived"
                        android:layout_width="match_parent"
                        android:enabled="false"
                        android:layout_height="wrap_content"
                        android:text="@string/main_menu_archived"
                        android:layout_marginTop="10dp">
                    </Button>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--                Opcion 6-->

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_baseline_person_24"/>
                    <Button
                        android:id="@+id/main_menu_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_menu_profile"
                        android:enabled="false"
                        android:layout_marginTop="10dp">
                    </Button>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--                5-6-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="20dp"
                android:weightSum="2">
                <!--Opcion 5-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_baseline_info_24"/>
                    <Button

                        android:id="@+id/main_menu_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/main_menu_about"
                        android:layout_marginTop="10dp">
                    </Button>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--                Opcion 6-->

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_logout"/>
                    <Button
                        android:id="@+id/main_menu_log_out"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/main_menu_log_out"
                        android:layout_marginTop="10dp">
                    </Button>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <Button
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/purple_500"
            android:text="@string/main_menu_log_out" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>